adding k6 and allowing changes to k6 loadtest with autodeploy

--- a/k8s/kube-prometheus-stack.yaml
+++ b/k8s/kube-prometheus-stack.yaml
@@ -38,6 +38,8 @@ prometheus:
   prometheusSpec:
     image:
       tag: v2.31.1
+    enableFeatures:
+      - remote-write-receiver
     storageSpec:
       volumeClaimTemplate:
        spec:
