--- a/azure-vote-all-in-one-redis.yaml
+++ b/azure-vote-all-in-one-redis.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: azure-vote-back
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: azure-vote-back
@@ -22,11 +22,11 @@ spec:
         - containerPort: 80
         resources:
           requests:
-            cpu: 100m
-            # memory: 200Mi
+            cpu: 300m
+            memory: 2Gi
           limits:
-            cpu: 500m
-            # memory: 2Gi
+            cpu: 1500m
+            memory: 10Gi
 ---
 apiVersion: v1
 kind: Service
@@ -43,7 +43,7 @@ kind: Deployment
 metadata:
   name: azure-vote-front
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: azure-vote-front
@@ -67,11 +67,11 @@ spec:
         - containerPort: 80
         resources:
           requests:
-            cpu: 50m
+            cpu: 300m
             # memory: 200Mi
           limits:
-            cpu: 500m
-            # memory: 2Gi
+            cpu: 1
+            memory: 2Gi
         env:
         - name: COMPUTING_BK
           value: "http://azure-vote-back"
