--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -31,6 +31,7 @@ metadata:
   namespace: monitoring
   labels:
     app: nginx-ingress
+    release: prometheus-stack
 spec:
   endpoints:
   - interval: 10s
@@ -42,45 +43,34 @@ spec:
     matchNames:
     - ingress
 
----
-apiVersion: keda.sh/v1alpha1
-kind: ScaledObject
-metadata:
-  name: prometheus-azure-vote-back
-  namespace: default
-spec:
-  scaleTargetRef:
-    name: azure-vote-back
-  pollingInterval: 5
-  cooldownPeriod:  30
-  minReplicaCount: 1
-  maxReplicaCount: 10
-  advanced:
-    # restoreToOriginalReplicaCount: true
-    horizontalPodAutoscalerConfig:
-      behavior:
-        scaleDown:
-          stabilizationWindowSeconds: 30
-          # policies:
-          # - type: Percent
-          #   value: 100
-          #   periodSeconds: 15
-  triggers:
-  - type: prometheus
-    metadata:
-      serverAddress: http://prometheus-stack-kube-prom-prometheus.monitoring.svc.cluster.local:9090
-      metricName: number_of_requests
-      threshold: '1'
-      query: sum(rate(nginx_ingress_controller_nginx_process_connections[1m]))
-  - type: cpu
-    metadata:
-      type: AverageValue
-      value: "200m"
-  # - type: memory
-  #   metadata:
-  #     type: AverageValue
-  #     value: "75"
+# INGRESS FOR PROMETHEUS AND GRAFANA IS DEPLOYED BY PROMETHEUS HELM CHART
   
+# ---
+
+# apiVersion: autoscaling/v2beta2
+# kind: HorizontalPodAutoscaler
+# metadata:
+#   name: prom-adapter
+#   namespace: default
+# spec:
+#   scaleTargetRef:
+#     apiVersion: apps/v1
+#     kind: Deployment
+#     name: azure-vote-back
+#   minReplicas: 1
+#   maxReplicas: 10
+#   metrics:
+#   - type: Object
+#     object:
+#       metric:
+#         name: nginx_ingress_controller_requests
+#       describedObject:
+#         apiVersion: networking.k8s.io/v1beta1
+#         kind: ingress
+#         name: azure-vote-front
+#       target:
+#         type: Value
+#         value: "1"
 
 # --- 
 # apiVersion: networking.k8s.io/v1
