--- a/.github/workflows/k6-update.yaml
+++ b/.github/workflows/k6-update.yaml
@@ -13,7 +13,7 @@ env:
   natzkaacr-service-principal-id: "d7820fe3-a20e-4d77-a3a1-76acb2517254"
 
 jobs:
-  deploy:
+  deploy-k6:
     runs-on: ubuntu-latest
     steps:
 
@@ -31,6 +31,12 @@ jobs:
         kubectl --namespace default create configmap k6-load-test-js --from-file k6/load-test.js --output yaml
         kubectl --namespace default apply -f k6/k6.yaml
 
+  deploy-k8s:
+    runs-on: ubuntu-latest
+    steps:
+
+    - uses: actions/checkout@v2
+    
     - uses: azure/k8s-set-context@v1
       id: set-kubectl-context
       with:
