--- a/azure-vote-all-in-one-redis.yaml
+++ b/azure-vote-all-in-one-redis.yaml
@@ -17,7 +17,10 @@ spec:
       containers:
       - name: azure-vote-back
         image: natzkadevcontainerregistry.azurecr.io/azure-vote-back:latest
-        #mcr.microsoft.com/oss/bitnami/redis:6.0.8
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 80
         ports:
         - containerPort: 80
         resources:
@@ -62,13 +65,15 @@ spec:
       containers:
       - name: azure-vote-front
         image: natzkadevcontainerregistry.azurecr.io/azure-vote-front:latest
-        # mcr.microsoft.com/azuredocs/azure-vote-front:v1
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 80
         ports:
         - containerPort: 80
         resources:
           requests:
             cpu: 300m
-            # memory: 200Mi
           limits:
             cpu: 1
             memory: 2Gi
